--- a/src/index.css
+++ b/src/index.css
@@ -1,45 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@600&display=swap');
-
-
-@media (max-width: 780px) {
-  td,th{
-    font-size: 0.8rem;
-    padding: 5px;
-  }
-}
-
-@media (max-width: 480px) {
-  td,th{
-    font-size: 0.8rem;
-    padding: 0;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  list-style-type: none;
-  text-decoration: none;
 }
 
 body{
   font-family: Poppins;
   overflow-x: hidden;
-  background-color: #e5e5e5;
-}
-
-td{
-  text-align: left;
-  padding: 15px;
-  opacity: 0.8;
-}
-
-th{
-  text-align: left;
-  padding: 15px;
-  opacity: 0.8;
 }
